# FedXplore

./: .gitignore  LICENSE  README.md  setup.cfg
.streamlit/: config.toml
docs/: C4.md  attacks.md  attacks_and_defences.md  client_selection.md  config.md  experiments.md  logging.md  method.md  personalization.md
scripts/: all_script.py  byz_cifar10_script.py  cs_cifar10_script.py  pers_cifar10_script.py
src/: attack_clients.py  train.py
src/client_selectors/: base.py  byzant_client.py  delta.py  fedcbs.py  fedcor.py  pow.py  uniform.py
src/configs/: config.yaml
src/configs/attacks/: alie.yaml  ipm.yaml  label_flip.yaml  random_grad.yaml  sign_flip.yaml
src/configs/client_selector/: base.yaml  byzant_client.yaml  delta.yaml  fedcbs.yaml  fedcor.yaml  pow.yaml  uniform.yaml
src/distributions/: dirichlet.py  dirichlet_multilabel.py  hospital.py  sharded.py  uniform.py
src/federated_datasets/: cifar100_dataset.py  cifar10_dataset.py  federated_dataset.py  ptbxl_dataset.py  tiny_imagenet.py  tis_dataset.py
src/manager/: manager.py
src/model_trainers/: cifar10_model_trainer.py  ecg_trainer.py  image_trainer.py  ptbxl_model_trainer.py
src/utils/: attack_utils.py  cifar_utils.py  data_utils.py  dataset_utils.py  logging_utils.py  losses.py  manager_utils.py  metrics_utils.py  model_utils.py  process_utils.py  utils.py
tests/: test_framework_paths.py  test_ui_launcher.py
ui/: README.md  __init__.py  launcher.py  run_ui.py
ui/templates/: byzantine_label_flip.yaml  debug.yaml  dirichlet_fedcor.yaml  personalization_fedamp.yaml
(+105 files in other folders)
