[metadata]
name = federated-learning
version = 0.1.0
author = Skorik Sergey
author_email = skorik@ispras.ru
description = A federated learning framework.
long_description = file: README.md
# url = https://github.com/yourusername/federated-learning
# license = MIT

[options]
packages = find:
install_requires =
    hydra-core==1.3.2
    opencv-python==4.11.0.86
    pandas==2.2.3
    pip==22.0.2
    requests==2.32.3
    scikit-learn==1.6.1
    setuptools==59.6.0
    torchvision==0.21.0
    ecglib==1.1.1
    datasets==4.0.0
python_requires = >=3.8