[metadata]
name = federated-learning
version = 0.1.0
author = Skorik Sergey
author_email = skorik@ispras.ru
description = A federated learning framework.
long_description = file: README.md
# url = https://github.com/yourusername/federated-learning
# license = MIT

[options]
packages = find:
install_requires =
    hydra-core==1.3.2
    opencv-python==4.11.0.86
    psutil==7.0.0
    pandas
    requests==2.32.3
    scikit-learn==1.6.1
    torchvision
    # ecglib==1.1.1
    ecglib@git+ssh://git@gitlab.ispras.ru/ecg_research/ecglib.git@5106070404a71a105ad6de4ad489b7ecde7e4ca3
    datasets==4.0.0
    numcodecs==0.13.1
    zarr==2.18.3
    mlflow==3.3.2
    boto3==1.39.11
    tabulate==0.9.0
python_requires = >=3.8
